# squarebox

./: .gitignore  CMakeLists.txt  README.md
include/: block_colliders.h  block_functions.h  block_models.h  block_registry.h  block_state_bitfields.h  block_states.h  block_tick_list.h  block_variants.h  chunk.h  chunk_layer.h  chunk_manager.h  container_vector.h  defines.h  entity.h  entity_list.h  game.h  game_settings.h  item_container.h  item_entity.h  item_registry.h  light_queue.h  liquid_spread.h  player.h  sign_editor.h  texture_atlas.h  types.h  virtual_cursor.h  world_manager.h
include/entity/: entity.h  item_entity.h  player.h
include/lists/: block_tick_list.h  container_vector.h  entity_list.h
include/registries/: block_colliders.h  block_models.h  block_registry.h  item_registry.h  texture_atlas.h
src/: block_colliders.c  block_functions.c  block_models.c  block_registry.c  block_state_bitfields.c  block_states.c  block_tick_list.c  chunk.c  chunk_layer.c  chunk_manager.c  container_vector.c  entity.c  entity_list.c  game.c  game_settings.c  item_container.c  item_entity.c  item_registry.c  light_queue.c  liquid_spread.c  main.c  player.c  sign_editor.c  texture_atlas.c  types.c  virtual_cursor.c  world_manager.c
src/entity/: entity.c  item_entity.c  player.c
src/lists/: block_tick_list.c  container_vector.c  entity_list.c
src/registries/: block_colliders.c  block_models.c  block_registry.c  item_registry.c  texture_atlas.c
